# knights-tour

./: .gitignore  Makefile  Makefile.am  Makefile.in  README.md  configure.ac  knights_tour.cpp  test_util
src/: game_state.cpp  game_state.h  knights_tour.cpp  move.h  squares.cpp  squares.h  unvisited_degree.cpp  unvisited_degree.h  utils.cpp  utils.h
tests/: test_knights_tour.cpp  test_util  test_util.cpp
tests/test_util.dSYM/Contents/Resources/DWARF/: test_util
